--- a/src/blocks/navbar/navbar.scss
+++ b/src/blocks/navbar/navbar.scss
@@ -9,8 +9,15 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  width: 100rem;
+  width: 100%;
   height: 100%;
+  padding-right: 5rem;
+  padding-left: 5rem;
+
+  @media (min-width: 1000px) {
+    width: 100rem;
+    padding: 0;
+  }
 
   @media (min-width: 1400px) {
     width: 120rem;
@@ -51,49 +58,98 @@
     color: #bbb;
   }
 
-  &__list {
+  &__list,
+  &__dropdown--personal {
     display: flex;
+    flex-direction: column;
+    position: fixed;
+    z-index: 200;
+    top: 0;
+    left: 0;
+    width: 20rem;
+    height: 100vh;
     margin: 0;
     padding: 0;
+    padding-top: 2rem;
+
     list-style: none;
+    background: linear-gradient(to bottom, #032181, #094399, #04207c);
+
+    @media (min-width: 1000px) {
+      flex-direction: row;
+      align-items: center;
+      justify-content: center;
+      position: static;
+      width: 100%;
+      height: auto;
+      padding: 0;
+      background: none;
+    }
   }
 
   &__list-item {
     display: flex;
     align-items: center;
-    height: 8rem;
-    padding: 2rem;
+    width: 100%;
+    height: auto;
+    margin: 0.4rem 0;
+    padding-right: 1rem;
+    padding-left: 1rem;
     transition: all 0.1s;
 
-    &:hover {
-      border-bottom: 0.2rem solid #fff;
+    @media (min-width: 1000px) {
+      width: auto;
+      height: 8rem;
+      padding: 2rem;
+
+      &:hover i {
+        transform: rotate(180deg);
+      }
     }
 
-    &:hover i {
-      transform: rotate(180deg);
+    &:hover {
+      border-bottom: none;
+
+      @media (min-width: 1000px) {
+        border-bottom: 0.2rem solid #fff;
+      }
     }
   }
 
   &__list-link {
     width: 100%;
-    height: 100%;
+    height: auto;
 
-    font-size: 1.7rem;
+    font-size: 1.4rem;
     font-weight: 400;
     text-transform: uppercase;
     text-decoration: none;
     color: #fff;
 
+    @media (min-width: 1000px) {
+      font-size: 1.7rem;
+    }
+
     i {
       margin-left: 0.5rem;
 
+      font-size: 1.2rem;
+      transform: rotate(-90deg);
       transition: transform 0.3s;
-      font-size: 1.5rem;
+
+      @media (min-width: 1000px) {
+        font-size: 1.5rem;
+        transform: rotate(0);
+      }
     }
 
     &:hover {
       color: #fff;
     }
+  }
+
+  &__buttons {
+    flex-shrink: 0;
   }
 
   &__btn {
@@ -120,38 +176,57 @@
   }
 
   &__dropdown {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    position: absolute;
-    z-index: 100;
-    top: 8rem;
-    left: 0;
-    width: 100%;
-    height: 20rem;
-    margin: 0;
-    padding: 0 25rem;
+    padding: 1rem;
 
-    visibility: hidden;
-    opacity: 0;
-    list-style: none;
-    transition: all 0.3s;
+    @media (min-width: 1000px) {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      position: absolute;
+      z-index: 100;
+      top: 8rem;
+      left: 0;
+      width: 100%;
+      height: 20rem;
+      margin: 0;
+      padding: 0 25rem;
 
-    background: linear-gradient(to right, #066399, #2f8fdf, #066399);
+      visibility: hidden;
+      opacity: 0;
+      list-style: none;
+      transition: all 0.3s;
+
+      background: linear-gradient(to right, #066399, #2f8fdf, #066399);
+    }
 
     @media (min-width: 1500px) {
       padding: 0 30rem;
+    }
+
+    &--personal {
+      opacity: 1;
+      visibility: visible;
+    }
+
+    &--business {
+      display: none;
     }
   }
 
   &__dropdown-item {
     display: flex;
     flex-direction: column;
-    width: 25rem;
-    margin: 2rem 3.4rem;
+    width: 100%;
+    margin: 1rem;
+    margin-bottom: 0;
 
     &:hover #{$block-name}__dropdown-link {
       color: #ddd;
+    }
+
+    @media (min-width: 1000px) {
+      width: 25rem;
+      margin: 2rem 3.4rem;
     }
 
     @media (min-width: 1100px) {
@@ -161,19 +236,50 @@
     @media (min-width: 1500px) {
       margin: 2rem 10rem;
     }
+
+    &--heading {
+
+      @media (min-width: 1000px) {
+        display: none;
+      }
+
+      a {
+        font-size: 1.6rem;
+        text-decoration: none;
+        text-transform: uppercase;
+        color: #fff;
+      }
+
+      i {
+        margin-right: 1rem;
+        font-size: 1.5rem;
+        transform: rotate(90deg);
+      }
+    }
   }
 
   &__dropdown-link {
-    font-size: 1.6rem;
+    padding: 0.5rem 0;
+    font-size: 1.4rem;
     text-decoration: none;
     color: #fff;
+
+    @media (min-width: 1000px) {
+      padding: 0;
+      font-size: 1.6rem;
+    }
 
     &:hover {
       color: #fff;
     }
 
     &--2 {
+      display: none;
       font-size: 1.3rem;
+
+      @media (min-width: 1000px) {
+        display: block;
+      }
     }
   }
 }
