--- a/src/blocks/logo/logo.scss
+++ b/src/blocks/logo/logo.scss
@@ -7,13 +7,23 @@
   $block-name:                &; // #{$block-name}__element
 
   flex-shrink: 0;
-  position: relative;
+  position: absolute;
+  top: 4rem;
+  left: 50%;
+  transform: translate(-50%, -50%);
 
   font-size: 3.5rem;
   font-style: italic;
   font-weight: 800;
   color: #fff;
   cursor: pointer;
+
+  @media (min-width: 1000px) {
+    position: relative;
+    top: unset;
+    left: unset;
+    transform: unset;
+  }
 
   &__p1 {
     position: relative;
