--- a/src/blocks/navbar/navbar.scss
+++ b/src/blocks/navbar/navbar.scss
@@ -59,19 +59,21 @@
   }
 
   &__list,
-  &__dropdown--personal {
+  &__dropdown--personal,
+  &__dropdown--business {
     display: flex;
     flex-direction: column;
     position: fixed;
     z-index: 200;
     top: 0;
-    left: 0;
+    left: -20rem;
     width: 20rem;
     height: 100vh;
     margin: 0;
     padding: 0;
     padding-top: 2rem;
 
+    transition: left 0.6s cubic-bezier(1, 0, 0, 1);
     list-style: none;
     background: linear-gradient(to bottom, #032181, #094399, #04207c);
 
@@ -84,6 +86,13 @@
       height: auto;
       padding: 0;
       background: none;
+    }
+  }
+
+  &__list {
+
+    .change & {
+      left: 0;
     }
   }
 
@@ -150,6 +159,7 @@
 
   &__buttons {
     flex-shrink: 0;
+    margin-left: auto;
   }
 
   &__btn {
@@ -203,13 +213,10 @@
       padding: 0 30rem;
     }
 
-    &--personal {
+    &--personal,
+    &--business {
       opacity: 1;
       visibility: visible;
-    }
-
-    &--business {
-      display: none;
     }
   }
 
