--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -156,11 +156,11 @@ block content
 
           li.account__list-item
             span.account__number 2
-            span.account__text Selvage affogato ramps leggings small batch.
+            span.account__text Kombucha kale chips tilde, gluten-free disrupt crucifix ramps poke.
 
           li.account__list-item
             span.account__number 3
-            span.account__text Kombucha kale chips tilde, gluten-free disrupt crucifix ramps poke forage sartorial edison bulb vaporware.
+            span.account__text Selvage affogato ramps leggings small batch.
     ///.account
 
     section.signup#signup
