--- a/src/blocks/page-footer/page-footer.scss
+++ b/src/blocks/page-footer/page-footer.scss
@@ -16,10 +16,22 @@
 
   &__top {
     display: flex;
+    flex-direction: column;
+    align-items: center;
     justify-content: space-between;
-    width: 70%;
     border-bottom: 0.1rem dotted #262626;
     padding-bottom: 1rem;
+
+    @media (min-width: 550px) {
+      flex-direction: row;
+      align-items: center;
+    }
+
+    @media (min-width: 1000px) {
+      flex-direction: row;
+      align-items: flex-start;
+      width: 80%;
+    }
   }
 
   &__img {
@@ -30,7 +42,12 @@
   &__list {
     display: flex;
     align-items: center;
+    margin-bottom: 1rem;
     list-style: none;
+
+    @media (min-width: 1000px) {
+      margin-bottom: 0;
+    }
   }
 
   &__list-item {
@@ -41,14 +58,21 @@
     font-size: 1.5rem;
     font-weight: 600;
     text-decoration: none;
+    white-space: nowrap;
     color: #262626;
   }
 
   &__copyright {
-    margin-top: 2rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
 
     font-size: 1.4rem;
     font-weight: 600;
     letter-spacing: 0.1rem;
+
+    @media (min-width: 1000px) {
+      margin: 0;
+      margin-top: 2rem;
+    }
   }
 }
