--- a/src/blocks/page/page.scss
+++ b/src/blocks/page/page.scss
@@ -32,8 +32,16 @@
   -webkit-text-size-adjust: 100%; // stylelint-disable-line
   min-width: 320px;
   min-height: 100%;
-  font-size: 50%;
+  font-size: 40%;
   scroll-behavior: smooth;
+
+  @media (min-width: 400px) {
+    font-size: 45%;
+  }
+
+  @media (min-width: 800px) {
+    font-size: 50%;
+  }
 
   @media (min-width: 1100px) {
     font-size: 55%;
